done with bar chart

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
                         <!-- This is the total granted requests section-->
                         <div id="total_caes_granted">
-                            <h2>Total CAEs granted</h2>
+                            <h2>Students enrolled with CAE financing</h2>
                             <svg id="total_caes_chart" width="700" height="200"></svg>
                         </div>
 
