--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
     </div>
     
-    <div id="main_grid_container" class="display_element">
+    <div id="main_grid_container" class="non_display">
         <!-- This is the left section-->
         <div id="region_selection">
             <div>
@@ -374,12 +374,12 @@
                         <!-- Female button -->
                         <circle class="female_button_unselected" data-value="F" cx="25" cy="15" r="14"></circle>
                         <text x="25" y="15" text-anchor="middle" dominant-baseline="middle"
-                            font-family="Calibri" font-size="8.5" fill="#000">Female</text>
+                         font-size="6.5" fill="#000">Female</text>
 
                         <!-- Male button -->
                         <circle class="male_button_unselected" data-value="M" cx="75" cy="15" r="14"></circle>
                         <text x="75" y="15" text-anchor="middle" dominant-baseline="middle"
-                            font-family="Calibri" font-size="8.5" fill="#000">Male</text>
+                            font-size="6.5" fill="#000">Male</text>
                     </svg>
                 </div>
             </div>
