--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div id="home" class="display_element" style="height: 100vh; position: relative; font-family: 'Lucida Sans', sans-serif; overflow: hidden;">
 
     <!-- Vertically centered image taking 50% height -->
-    <img src="svgs/volantin.jpg"
+    <img src="www/svgs/volantin.jpg"
          style="
             position: absolute;
             top: 50%;
@@ -59,7 +59,7 @@
 
                 <!-- 1. Rising Demand -->
                 <div class="step active" id="step1">
-                    <img height=200 width=300 src="svgs/hands.jpg"/>
+                    <img height=200 width=300 src="www/svgs/hands.jpg"/>
                     <h2>1990 - 2005</h2>
                     <h2>A Public Policy to promote access to Higher Education</h2>
                     <p>After many years of economic expansion, Higher Education is looked as the main vehicle for social mobility.</p> 
@@ -69,7 +69,7 @@
 
                 <!-- 2. CAE Launch -->
                 <div class="step" id="step2">
-                    <img height=200 width=200 src="svgs/mochila.avif"/> 
+                    <img height=200 width=200 src="www/svgs/mochila.avif"/> 
                     <h2>2006: CAE Begins and Enrollment Expands</h2>
                     <h2><i>Crédito con Aval del Estado</i></h2>
                     <p>Goverment tells the banks: <i>"I'll be the guarantor of each student loan"</i></p>
@@ -79,7 +79,7 @@
 
                 <!-- 3. Growth & Frustration -->
                 <div class="step" id="step3">
-                    <img height=200 width=200 src="svgs/protest.svg"/>
+                    <img height=200 width=200 src="www/svgs/protest.svg"/>
                     <h2>2011–2016: Protests and the Demand for Higher Education as a Right</h2>
                     <p>As enrollment soared, so did frustration. Students argued that tuition was too expensive and that quality did not always match the cost.</p>
                     <p>Massive nationwide protests followed—calling for better oversight, fairer funding, and the idea that access to Higher Education should be a <b>social right</b>, not a financial burden.</p>
@@ -90,7 +90,7 @@
 
                 <!-- 4. Government Action -->
                 <div class="step" id="step4">
-                    <img height=200 width=200 src="svgs/politics.svg"/>
+                    <img height=200 width=200 src="www/svgs/politics.svg"/>
                     <h2>2017–Today: Debt Relief and the Politics of CAE</h2>
                     <p>By the mid-2010s, more than a million students had used CAE loans—making it <b>one of the largest public-backed credit programs in Chile’s history</b>.</p>
                     <p>The government began purchasing CAE portfolios from banks, reducing interest rates, and expanding tuition-free policies for low- and middle-income families.</p>
@@ -237,7 +237,7 @@
                             <!-- Hidden canvas used for pixel sampling -->
                             <canvas id="imageCanvas" width="900" height="310" class="non_display"></canvas>
 
-                            <img id="dollarImage" src="svgs/US_one_dollar_bill,_obverse,_series_2009.jpg" class="non_display">
+                            <img id="dollarImage" src="www/svgs/US_one_dollar_bill,_obverse,_series_2009.jpg" class="non_display">
 
                             <svg id="dots_total_borrowed" width="900" height="310"></svg>
 
