--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;700&display=swap" rel="stylesheet">
 
-
+<!-- This project was done mostly on my own with special help of ChatGPT and Gemini in the JavaScript part and in some parts of CSS styling-->
 </head>
 <body>
     <script src="js/main.js"></script> <!-- Here I'm importing the JS functions-->
